--- a/public/style.css
+++ b/public/style.css
@@ -66,9 +66,9 @@ div#graphbody{
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 150px;
-    width: 760px;
+    width: 750px;
     padding: 10px;
-	/*background-color: green;*/
+	background-color: gray;
 	height: 500px;
 }
 
@@ -107,6 +107,7 @@ div#text{
 div#footer{
 	margin-left: auto;
 	margin-right: auto;
+	text-align:center;
 	margin-top: 10px;
 	border: 2px solid #666;
 	padding: 30px;
